# salita

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  build.rs  config.example.toml  kanban.md  package.json  playwright.config.ts  run_e2e_tests.sh
.claude/: hooks.sh
.githooks/: README.md  pre-commit  pre-push
assets/css/: input.css  style.css
assets/js/: app.js  passkey.js
docs/: CAPABILITY_MESH_DESIGN.md  DESIGN_PRINCIPLES.md  DEVICE_IDENTITY_MERGING.md  DUAL_PAIRING_STRATEGY.md  IMPLEMENTATION_PLAN_TOKEN_MESH.md  IROH_INTEGRATION.md  MESH_CONCEPT.md  NODE_IDENTITY.md  PAIRING_HANDSHAKE.md  PASSKEY_EXTERNAL_PAIRING.md  QUICKSTART.md  QUOTA_EXAMPLES.md  REFACTORING_PLAN.md  REPLICATION_STRATEGY.md  TOKEN_BASED_MESH.md  USER_DEVICE_GROUPS.md
e2e/: passkey.spec.ts  stream.spec.ts  welcome.spec.ts
migrations/: 001_init.sql  001_initial.sql  002_content_index.sql  002_social_accounts.sql  003_catalog_origin.sql  003_services.sql  004_content_previews.sql  004_passkey_json.sql  005_mesh_network.sql  006_token_based_mesh.sql  007_cleanup_duplicate_nodes.sql  008_pairing_state_persistence.sql  009_distributed_storage.sql  010_storage_quotas.sql
scripts/: dev.sh  install.sh  uninstall.sh
src/: catalog_sync.rs  config.rs  db.rs  discovery.rs  error.rs  extractors.rs  files.rs  indexer.rs  iroh_node.rs  lib.rs  main.rs  node.rs  peer_client.rs  state.rs  thumbnail.rs  tls.rs
src/auth/: flexible_auth.rs  handlers.rs  handlers_v2.rs  join_tokens.rs  linking.rs  mod.rs  pairing.rs  peer_auth.rs  request_context.rs  session.rs  webauthn.rs
src/db/: mod.rs  models.rs
src/graphql/: mod.rs  mutations.rs  queries.rs  schema.rs  types.rs
src/http/: content.rs  files.rs  mesh.rs  mod.rs
src/mcp/: mod.rs  tools.rs  types.rs
src/mesh/: mod.rs  node_identity.rs  tokens.rs
src/pairing/: domain.rs  mod.rs  repository.rs
src/routes/: assets.rs  auth.rs  connect.rs  dashboard.rs  graphql.rs  home.rs  mod.rs  settings.rs  stream.rs  trust.rs
src/storage/: eviction.rs  iroh_node.rs  metadata.rs  mod.rs  placement.rs  replication.rs
templates/: base.html
templates/components/: add_device_modal.html  comment.html  comment_list.html  connect_modal.html  flash.html  join_modal.html  nav.html  post_card.html  reaction_bar.html  settings_modal.html  social_post.html
templates/pages/: dashboard.html  home.html  join_mesh.html  login.html  pair.html  setup.html  stream.html  trust.html
tests/: README.md  e2e_dashboard.rs  integration_test.rs  pairing_e2e.rs  token_auth_test.rs
