[package]
name = "salita"
version = "0.2.0"
edition = "2021"
description = "A home device mesh with MCP interface"
license = "MIT"
repository = "https://github.com/Dorky-Robot/salita"

[[bin]]
name = "salita"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Discovery
mdns-sd = "0.11"
flume = "0.11"

# Peer HTTP client
reqwest = { version = "0.12", features = ["json"] }

# File search
glob = "0.3"

# JSON Schema for MCP tool params
schemars = "0.8"

# Utilities
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dirs = "5"
hostname = "0.4"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
